--- a/src/style.css
+++ b/src/style.css
@@ -6,11 +6,40 @@
   box-sizing: border-box;
 }
 
+:root {
+  --very-dark-blue: #1b1d23;
+  --dark-grey: #60636c;
+  --medium-grey: #7f8490;
+  --light-grey: #c9cdd9;
+  --very-light-grey: #f0f0f5;
+  --red: #df5858;
+
+  --page-background: #fff;
+
+  --text-primary: var(--dark-grey);
+  --text-header-primary: var(--very-dark-blue);
+
+  --input-text-placeholder: var(--light-grey);
+  --input-text-active: var(--very-dark-blue);
+  --input-text-error: var(--red);
+
+  --button-background: var(--very-dark-blue);
+  --button-text: #fff;
+
+  --button-background-hover: var(--dark-grey);
+  --button-background-active: var(--light-grey);
+
+  --number-button-background-hover: var(--very-light-grey);
+  --number-button-background-active: var(--very-dark-blue);
+}
+
 body {
   font-family: "League Spartan", sans-serif;
   font-size: 1.125rem;
   line-height: 133.333%;
   letter-spacing: 0;
+  color: var(--text-primary);
+  background-color: var(--page-background);
 }
 
 h1,
@@ -20,6 +49,7 @@ h4,
 h5,
 h6 {
   font-weight: 700;
+  color: var(--text-header-primary);
 }
 
 /* UTILITIES */
