--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 700;
   color: var(--text-header-primary);
 }
 
@@ -65,24 +64,28 @@ ul {
   font-size: 15.625rem;
   line-height: 80%;
   letter-spacing: -5px;
+  font-weight: 700;
 }
 
 .heading-lg {
   font-size: 6rem;
   line-height: 83.333%;
   letter-spacing: -2px;
+  font-weight: 700;
 }
 
 .heading-md {
   font-size: 4.5rem;
   line-height: 88.889%;
   letter-spacing: -2px;
+  font-weight: 700;
 }
 
 .heading-sm {
   font-size: 2rem;
   line-height: 125%;
   letter-spacing: 0;
+  font-weight: 700;
 }
 
 .btn--solid {
@@ -138,4 +141,15 @@ header > .container {
   background-color: var(--very-light-grey);
   width: 91.5%;
   padding: 2.5rem 3rem;
+}
+
+.nav__list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.nav__item {
+  color: var(--very-dark-blue);
+  font-weight: 700;
 }
