--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,7 @@ ul {
 }
 
 .heading-lg {
-  font-size: clamp(3rem, 1.4694rem + 6.5306vw, 6rem);
+  font-size: clamp(3rem, 0.1374rem + 12.2137vw, 6rem);
   line-height: 83.333%;
   letter-spacing: clamp(-0.125rem, -0.0495rem + -0.1088vw, -0.075rem);
 }
@@ -154,6 +154,25 @@ header > .container {
   font-weight: 700;
 }
 
+/* HERO */
+.hero {
+  background-image: url("assets/home/mobile/image-hero-paramour.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  padding: 6.875rem 0;
+  color: var(--white);
+
+  h1 {
+    color: var(--white);
+    margin-bottom: 0.25em;
+    max-width: 10ch;
+  }
+
+  .btn--solid {
+    margin-top: clamp(2.5625rem, 7.6923rem + -10.687vw, 5.1875rem);
+  }
+}
+
 @media (max-width: 767px) {
   .nav__item {
     color: var(--very-dark-blue);
@@ -164,6 +183,11 @@ header > .container {
 }
 
 @media (min-width: 48rem) {
+  .container {
+    width: 75%;
+  }
+
+  /* HEADER */
   header > .container {
     justify-content: flex-start;
     gap: clamp(5rem, 2.8947rem + 4.386vw, 5.9375rem);
@@ -185,22 +209,53 @@ header > .container {
     flex-direction: row;
     gap: 3.8125rem;
   }
-}
 
-/* HERO */
-.hero {
-  background-image: url("assets/home/mobile/image-hero-paramour.jpg");
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-  padding: 6.875rem 0;
-  color: var(--white);
-
-  h1 {
-    color: var(--white);
-    margin-bottom: 0.25em;
+  /* HERO */
+  .hero {
+    background-image: none;
   }
 
-  .btn--solid {
-    margin-top: 5.1875rem;
+  .hero > .container {
+    background-image: url("assets/home/tablet/image-hero-paramour.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    padding: 11.4rem clamp(3.625rem, -14.9013rem + 38.5965vw, 11.875rem);
+    position: relative;
+    z-index: 1;
+
+    p {
+      font-weight: 500;
+      max-width: 44ch;
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #000;
+      opacity: 0.35;
+      z-index: 2;
+    }
+
+    h1,
+    p,
+    a {
+      z-index: 3;
+    }
+  }
+}
+
+@media (min-width: 64rem) {
+  .container {
+    width: 85%;
+  }
+
+  .hero > .container {
+    background-image: url("assets/home/desktop/image-hero-paramour.jpg");
+    background-size: contain;
   }
 }
