add rectangle to welcome section

--- a/src/style.css
+++ b/src/style.css
@@ -211,7 +211,14 @@ header > .container {
 
 /* Welcome Section */
 .welcome {
-  margin: 8rem 0;
+  margin: 4.5rem 0;
+}
+
+.accent-rectangle {
+  width: 4rem;
+  height: 1px;
+  border-bottom: 1px solid var(--light-grey);
+  margin-bottom: 4.25rem;
 }
 
 .welcome__text {
