--- a/src/style.css
+++ b/src/style.css
@@ -194,8 +194,12 @@ header > .container {
 }
 
 /* HERO */
-.hero {
+.hero,
+.small-team {
   overflow: hidden;
+}
+
+.hero {
   padding: 6.875rem 0;
   color: var(--white);
   position: relative;
