--- a/src/style.css
+++ b/src/style.css
@@ -270,14 +270,20 @@ header > .container {
 .featured {
   margin: clamp(4.5625rem, 0.5128rem + 17.2789vw, 12.5rem) 0;
 
-  h2 {
-    margin-bottom: 2.75rem;
+  .title-row {
+    margin-bottom: clamp(2.75rem, 0.3049rem + 10.4326vw, 5.3125rem);
   }
 
   .btn--solid {
     margin-top: 1.5rem;
     text-align: center;
     width: 100%;
+  }
+
+  .title-row .btn--solid {
+    visibility: hidden;
+    height: 0;
+    position: absolute;
   }
 
   .card-container {
@@ -426,6 +432,31 @@ header > .container {
 
   /* Featured */
   .featured {
+    .title-row {
+      margin-bottom: clamp(4rem, 8.2599rem + -6.1404vw, 5.3125rem);
+    }
+
+    .btn--solid {
+      visibility: hidden;
+      height: 0;
+      position: absolute;
+    }
+
+    .title-row .btn--solid {
+      visibility: visible;
+      height: auto;
+      position: relative;
+
+      width: auto;
+      text-align: start;
+      margin: 0;
+    }
+
+    .title-row {
+      display: flex;
+      justify-content: space-between;
+    }
+
     .card {
       position: relative;
       .number {
@@ -493,7 +524,14 @@ header > .container {
 
   /* Featured */
   .featured {
+    .card-container {
+      grid-template-columns: repeat(3, 1fr);
+    }
     .card {
+      min-height: 35rem;
+      .number {
+        right: -0.75rem;
+      }
       &:nth-child(1) {
         background-image: url("assets/portfolio/desktop/image-del-sol.jpg");
       }
