limit card container to 1 row on big screens

--- a/src/style.css
+++ b/src/style.css
@@ -526,6 +526,7 @@ header > .container {
   .featured {
     .card-container {
       grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: 1fr;
     }
     .card {
       min-height: 35rem;
