--- a/src/style.css
+++ b/src/style.css
@@ -206,6 +206,12 @@ header > .container {
   color: var(--white);
   position: relative;
 
+  background-image: url("src/assets/home/mobile/image-hero-paramour.jpg");
+  background-color: rgba(0, 0, 0, 0.35);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: overlay;
+
   & > .container {
     position: static;
   }
@@ -433,20 +439,30 @@ footer {
     padding: 0;
   }
 
-  .hero > .container {
-    padding: 11.4rem clamp(3.625rem, -14.9013rem + 38.5965vw, 11.875rem);
+  .hero {
+    background-image: none;
+    background-color: transparent;
 
-    p {
-      font-weight: 500;
-      max-width: 44ch;
+    .container {
+      background-image: url("src/assets/home/tablet/image-hero-paramour.jpg");
+      background-color: rgba(0, 0, 0, 0.35);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-blend-mode: overlay;
+      padding: 11.4rem clamp(3.625rem, -14.9013rem + 38.5965vw, 11.875rem);
+
+      p {
+        font-weight: 500;
+        max-width: 44ch;
+      }
     }
-  }
 
-  .hero .btn--solid {
-    .arrow {
-      visibility: visible;
-      height: auto;
-      position: relative;
+    .btn--solid {
+      .arrow {
+        visibility: visible;
+        height: auto;
+        position: relative;
+      }
     }
   }
 
@@ -569,6 +585,10 @@ footer {
 @media (min-width: 64rem) {
   .container {
     width: 85%;
+  }
+
+  .hero > .container {
+    background-image: url("src/assets/home/desktop/image-hero-paramour.jpg");
   }
 
   .welcome > .container {
