--- a/src/style.css
+++ b/src/style.css
@@ -182,6 +182,21 @@ header > .container {
 .nav__item {
   font-weight: 700;
   cursor: pointer;
+
+  &.active {
+    color: var(--very-dark-blue);
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      left: 45%;
+      bottom: -30%;
+      width: 33%;
+      height: 1px;
+      border-bottom: 1px solid var(--very-dark-blue);
+    }
+  }
 }
 
 .nav__item a,
