--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -1,6 +1,7 @@
 /* Portfolio */
 .portfolio {
   margin-top: clamp(0rem, 6.8397rem + -14.2494vw, 3.5rem);
+  margin-bottom: clamp(4.5rem, 1.6939rem + 11.9728vw, 10rem);
   .container {
     display: grid;
     grid-template-columns: 1fr;
