--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,9 +1,3 @@
-/* About Us */
-.about-main {
-  h2 {
-    margin-bottom: 1.5rem;
-  }
-}
 /* HERO */
 .about-hero {
   .mobile-image {
@@ -32,7 +26,26 @@
   }
 
   h2 {
+    margin-bottom: 1.5rem;
     line-height: 108%;
+  }
+}
+
+/* HERITAGE */
+
+/* LEADERS */
+.leaders {
+  margin-top: clamp(0rem, 6.8397rem + -14.2494vw, 3.5rem);
+  margin-bottom: clamp(4.5rem, 1.6939rem + 11.9728vw, 10rem);
+
+  h2 {
+    margin-bottom: 3.5rem;
+  }
+
+  .leader-cards {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: clamp(4rem, 5.5102rem + -2.1769vw, 5rem);
   }
 }
 
@@ -48,6 +61,32 @@
   .heritage {
     .container {
       display: flex;
+    }
+  }
+
+  /* LEADERS */
+  .leaders {
+    .leader-cards {
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 0.75rem;
+    }
+  }
+}
+
+@media (min-width: 64rem) {
+  .leaders {
+    .container {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    h2 {
+      margin-bottom: 0;
+    }
+
+    .leader-cards {
+      width: 65%;
+      column-gap: 2rem;
     }
   }
 }
