--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -32,6 +32,16 @@
 }
 
 /* HERITAGE */
+.heritage {
+  margin-top: clamp(4.75rem, -2.645rem + 31.5522vw, 12.5rem);
+  margin-bottom: clamp(7rem, 1.7519rem + 22.3919vw, 12.5rem);
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+}
 
 /* LEADERS */
 .leaders {
